--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,9 +227,9 @@ hr {
     background-size: cover;
 }
 #headerwrap h1 {
-    margin-top: 130px;
+    margin-top: 20%;
     color: #fff;
-    font-size: 140px;
+    font-size: 6em;
     font-weight: 700;
     letter-spacing: 3px;
 }
