--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,9 +94,9 @@ hr {
     width: 200px;
     height: 100%}
 .menu h1.logo a {
-    font-family: Raleway, Helvetica, Arial, sans-serif;
+font-family: 'Oswald', sans-serif; */400+700 oswald weights installed*/
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 700;
     letter-spacing: .15em;
     line-height: 40px;
     text-transform: uppercase;
