adding animated background css

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -108,6 +108,30 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
+/* set bg color same as the first color defined in the animation function */
+.animated_bg {
+	background: #ef008c; 
+	color: #fff;
+}
+.animated_bg2 {
+	background: #abebfe;
+	color: #000;
+}
+.animated_bg3 {
+	background: #71a98b; 
+	color: #fff;
+}
+
+.animated_bg3 {
+	background: #71a98b; 
+	color: #fff;
+}
+
+.animated_bg4 {
+	background: #000000; 
+	color: #fff;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
